@@ -1,3 +1,7 @@
+2007-12-11  Corinna Vinschen  <corinna@vinschen.de>
+
+	* localtime.cc (tzset): Guard by a muto for thread safety.
+
 2007-12-11  Dave Korn  <dave.korn@artimi.com>
 
 	* cygheap.cc (_csbrk):  Don't request zero bytes from VirtualAlloc,
